# fiedler-compress

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: README.md  SWEEP.md  generate_summary.py  generate_sweep_summary.py
benchmarks/results/: public_depth_results_runpod_20260703.json  public_survival_desktop_models.json  public_survival_gx10_2026-06-30.json  survival_sweep_multipassage_20260714.json
fiedler_optimizer/: __init__.py  _tier.py  caveman.py  chunker.py  cli.py  core.py  graph.py  pinning.py  zones.py
fiedler_optimizer/benchmarks/: __init__.py  latency.py  quality.py
fiedler_optimizer/docs/: worked_example_6.md  worked_example_7.md
tests/: test_benchmark_latency.py  test_benchmark_quality.py  test_caveman.py  test_core.py  test_security.py
tests/fixtures/compression_corpus/: chat_history_verbose.txt  chat_history_verbose_groundtruth.json  instruction_chain.txt  instruction_chain_groundtruth.json  minimal_prose.txt  minimal_prose_groundtruth.json  mixed_code_prose.txt  mixed_code_prose_groundtruth.json  obfuscation_target.txt  obfuscation_target_groundtruth.json  rag_context_legal.txt  rag_context_legal_groundtruth.json  rag_context_scientific.txt  rag_context_scientific_groundtruth.json  rag_context_technical.txt  rag_context_technical_groundtruth.json  system_prompt_analyst.txt  system_prompt_analyst_groundtruth.json  system_prompt_coding.txt  system_prompt_coding_groundtruth.json
